fix(client): spacing the user-and-time

--- a/packages/amplication-client/src/Workspaces/ResourceListItem.scss
+++ b/packages/amplication-client/src/Workspaces/ResourceListItem.scss
@@ -31,7 +31,7 @@
     white-space: nowrap;
 
     .user-and-time {
-      padding-left: var(--default-spacing-small);
+      margin-left: var(--default-spacing-small);
     }
   }
 }
